--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 MONGO_URL='mongodb+srv://kashunikodithuwakku00:kash123@cluster0.ecju1rg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+JWT_SECRET='RENTALPROPERTY123'
